Add authentication and user entity

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DATABASE_PORT=5432
 DATABASE_USERNAME=review-hero
 DATABASE_PASSWORD=review-hero
 DATABASE_NAME=review-hero
+JWT_SECRET=egYJYSDNTHdwZ8SK6Mpg
